Reorganized classes in packages; Traducción Española;

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,22 +1,167 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="position">Poste</string>
-    <string name="app_name">el fútbol</string>
-    <string name="GoalsShotHead">Cabezazo</string>
-    <string name="GoalsShotHeadSnow"></string>
-    <string name="GoalsShotDefault">Meter un gol</string>
-    <string name="GoalsShotAll">Marcar</string>
-    <string name="GamesWon">ganar el partido</string>
-    <string name="GamesLost">perder el partido</string>
-    <string name="PosDef">la defensa</string>
-    <string name="PosAtk">la delantera</string>
-    <string name="PosMid">centro del campo</string>
-    <string name="PosGoal">portero</string>
+    <string name="app_name">Fútbol</string>
+    <string name="AvgGoalDiff">Promedio Diferencia de Meta</string>
+    <string name="Date">Fecha</string>
+    <string name="Error">El error</string>
+    <string name="GameDraws">El empate</string>
+    <string name="GamesLost">Pérdidas</string>
+    <string name="GamesPlayed">Juegos jugados</string>
+    <string name="GamesWon">Victorias</string>
+    <string name="GoalsGot">Goles en contra</string>
+    <string name="GoalsShotAll">Goles marcados</string>
+    <string name="GoalsShotDefault">Goles marcados (Pies)</string>
+    <string name="GoalsShotHead">Goles de cabeza</string>
+    <string name="GoalsShotHeadSnow">Goles de cabeza en la nieve</string>
+    <string name="GoalsShotPenalty">Metas de penalización</string>
+    <string name="Name">El nombre</string>
+    <string name="NoRemark">-</string>
+    <string name="NumPosAttack">Ataque jugado</string>
+    <string name="NumPosDefense">Defensa Jugada</string>
+    <string name="NumPosGoal">Jugado portero</string>
+    <string name="NumPosMidfield">Mediocampista jugado</string>
+    <string name="Password">Contraseña</string>
+    <string name="Nutmeg">Nuez moscada</string>
+    <string name="Participation">Partícipe</string>
+    <string name="PosAtk">Agresor</string>
+    <string name="PosAtkAbbrev">A</string>
+    <string name="PosDef">Defensa</string>
+    <string name="PosDefAbbrev">D</string>
+    <string name="PosGoal">Portero</string>
+    <string name="PosGoalAbbrev">P</string>
+    <string name="PosMid">Centro del campo</string>
+    <string name="PosMidAbbrev">C</string>
+    <string name="PositionAbbrev">P</string>
     <string name="Positions">Poste</string>
-    <string name="mniLogin">inicio de sesión</string>
-    <string name="Password">contraseña</string>
-    <string name="Username">nombre del usuario</string>
-    <string name="title_activity_login"></string>
-    <string name="action_settings"></string>
-    <string name="btnLogin">inicio de sesión</string>
+    <string name="Remark">Observación</string>
+    <string name="Scoreboard_titles_defeats">Marcador: Derrotas</string>
+    <string name="Scoreboard_titles_goalsgot">Marcador: Goles en contra</string>
+    <string name="Scoreboard_titles_goalsshot">Marcador: Goles marcados</string>
+    <string name="Scoreboard_titles_wins">Marcador: Ghana</string>
+    <string name="SelectPlayersForGame">Seleccione jugadores para el juego</string>
+    <string name="ShowPlayersOrGames">Mostrar:</string>
+    <string name="Username">Nombre de usuario</string>
+    <string name="action_settings">Ajustes</string>
+    <string name="btnAdd">Añadir</string>
+    <string name="btnBack">Espalda</string>
+    <string name="btnCancel">Cancelar</string>
+    <string name="btnContinue">Continuar</string>
+    <string name="btnLogin">Iniciar sesión</string>
+    <string name="btnNegative_dialogDeletePlayer">¡No!</string>
+    <string name="btnPositive_dialogDeletePlayer">Sí</string>
+    <string name="btnSave">Salvar</string>
+    <string name="btnShuffle">Barajar</string>
+    <string name="ckbIsAdmin">Administración</string>
+    <string name="ckbUpdatePassword">Actualiza contraseña</string>
+    <string name="ctxMniDeletePlayer">Borrar</string>
+    <string name="ctxMniEditPlayer">Editar</string>
+    <string name="game">Jugo</string>
+    <string name="low_storage_error">Las dependencias de detección de rostros no se pueden descargar debido al almacenamiento bajo del dispositivo</string>
+    <string name="misc">Diverso</string>
+    <string name="mniAdd">Añadir</string>
+    <string name="mniDisplay">Monitor</string>
+    <string name="mniEdit">Editar datos de usuario</string>
+    <string name="mniEnglish">English</string>
+    <string name="mniGerman">Deutsch</string>
+    <string name="mniLogout">Cerrar sesión</string>
+    <string name="mniMain">Principal</string>
+    <string name="mniTeam">Team(test)</string>
+    <string name="msg_CannotAssignGoalie">El portero no puede ser asignado</string>
+    <string name="msg_CannotConnectToWebservice">Error de conexión a servicio webo</string>
+    <string name="msg_CannotDeleteOwnPlayer">No se puede eliminar su propio reproductor</string>
+    <string name="msg_CannotDeletePlayerInLocalGame">No se puede eliminar el jugador que participa en el jugo guardado localmente</string>
+    <string name="msg_ConfirmGameDeletion">¿De verdad quieres eliminar este jugo?</string>
+    <string name="msg_ConfirmPlayerDeletion">¿De verdad quieres eliminar el reproductor \'%s\'?</string>
+    <string name="msg_ConnectionTimeout">Conexión con el servidor Tiempo de espera agotado</string>
+    <string name="msg_CouldNotDeleteGame">No se pudo eliminar el juego</string>
+    <string name="msg_CouldNotDeletePlayer">No se pudo eliminar el reproductor</string>
+    <string name="msg_CouldNotInsertGame">No se pudo insertar el juego</string>
+    <string name="msg_CouldNotInsertPlayer">No se pudo insertar el reproductor</string>
+    <string name="msg_CouldNotRefreshData">No se han podido actualizar los datos.</string>
+    <string name="msg_CouldNotSetPassword">No se pudo establecer la contraseña</string>
+    <string name="msg_CouldNotSetPositions">No se pudieron establecer posiciones</string>
+    <string name="msg_CouldNotUpdateGame">No se pudo actualizar el juego</string>
+    <string name="msg_CouldNotUpdateStats">No se han podido actualizar las estadísticas.</string>
+    <string name="msg_CouldNotUpdateUserData">No se pudo actualizar los datos de usuario</string>
+    <string name="msg_DataSavedLocally">Datos guardados localmente</string>
+    <string name="msg_DoubleBackPress">Oprima nuevamente para salir</string>
+    <string name="msg_EnterNameUsername">El nombre y el nombre de usuario no pueden estar vacíos</string>
+    <string name="msg_EnterNameUsernamePassword">Nombre, nombre de usuario y contraseña no pueden estar vacíos</string>
+    <string name="msg_EnterPassword">Introduzca una nueva contraseña</string>
+    <string name="msg_EnterUsernamePassword">Por favor, introduzca el nombre de usuario y la contraseña</string>
+    <string name="msg_IllegalName">El nombre sólo debe contener letras y números</string>
+    <string name="msg_IllegalPassword">La contraseña sólo debe contener letras y números</string>
+    <string name="msg_IllegalRemark">La observación debe contener solamente letras y números</string>
+    <string name="msg_IllegalUsername">El nombre de usuario solo debe contener letras y números</string>
+    <string name="msg_InconsistentGoalData">Goles Disparo debe igualar Goles Tiene equipo contrario</string>
+    <string name="msg_NameTooLong">El nombre no debe tener más de %d caracteres</string>
+    <string name="msg_NameTooShort">El nombre debe tener al menos %d caracteres</string>
+    <string name="msg_NetworkUnreachable">No es posible conectar con el servidor</string>
+    <string name="msg_NoPlayersToAssign">Ningún jugador para asignar</string>
+    <string name="msg_PasswordTooShort">La contraseña debe tener al menos %d caracteres</string>
+    <string name="msg_PlayerAdded">Jugador \'%s\' añadido</string>
+    <string name="msg_PlayerhasNoTeam">Cada jugador debe ser asignado a un equipo</string>
+    <string name="msg_SavedGame">Juego guardado</string>
+    <string name="msg_SelectMinNumOfPlayers">Al menos %d jugadores deben ser seleccionados para jugar un juego</string>
+    <string name="msg_SelectMinNumOfPositions">Se debe seleccionar al menos una posición</string>
+    <string name="msg_TeamHasNoGolaie">No Portero en:</string>
+    <string name="msg_TooManyGoalies">Solo un Portero es permitido por equipo</string>
+    <string name="msg_TooManyGoalkeeperOnlyPlayers">Hay más de 2 jugadores que sólo pueden jugar como portero</string>
+    <string name="msg_UnbalancedTeams">La diferencia de jugadores entre los equipos es demasiado alta</string>
+    <string name="msg_UpdatedUserData">Datos de usuario actualizados correctamente</string>
+    <string name="msg_UsernameNotAvailable">El nombre de usuario \'%s\' ya existe</string>
+    <string name="msg_UsernameOrPasswordInvalid">Nombre de usuario o contraseña inválidos</string>
+    <string name="msg_UsernameTooLong">El nombre de usuario no debe tener más de %d caracteres</string>
+    <string name="msg_UsernameTooShort">El nombre de usuario debe tener al menos %d caracteres</string>
+    <string name="msg_dialogDeletePlayer">¿Seguro que quieres eliminar el reproductor \'%s\'?</string>
+    <string name="nav_settings_title">Ajustes</string>
+    <string name="nav_site_notice_title">Aviso del sitio</string>
+    <string name="navigation_drawer_close">Cerrar el cajón de navegación</string>
+    <string name="navigation_drawer_open">Abrir el cajón de navegación</string>
+    <string name="no">No</string>
+    <string name="no_camera_permission">Esta aplicación no se puede ejecutar porque no tiene el permiso de cámara. La aplicación saldrá ahora.</string>
+    <string name="ok">DE ACUERDO</string>
+    <string name="permission_camera_rationale">El acceso a la cámara es necesario para la detección</string>
+    <string name="player">Jugador</string>
+    <string name="position">Posición</string>
+    <string name="preference_category_general_title">General</string>
+    <string name="preference_category_user_title">Usuario</string>
+    <string name="preference_category_webservice">Servicio web</string>
+    <string name="preference_general_usesnackbar">Utilizar Snackbar</string>
+    <string name="preference_language_summary">Idioma de la aplicación</string>
+    <string name="preference_language_title">Idioma</string>
+    <string name="preference_sitenotice_title">Aviso del sitio</string>
+    <string name="preference_teamassignment_layout_negativeBtn">Cancelar</string>
+    <string name="preference_teamassignment_layout_positiveBtn">DE ACUERDO</string>
+    <string name="preference_teamassignment_layout_summary">Seleccione un diseño de asignación de equipo</string>
+    <string name="preference_teamassignment_layout_title">Diseño de asignación de equipo</string>
+    <string name="preference_user_autologin">Ingreso automático</string>
+    <string name="preference_user_password_summary">Contraseña</string>
+    <string name="preference_user_password_title">Contraseña</string>
+    <string name="preference_user_username_summary">Nombre de usuario</string>
+    <string name="preference_user_username_title">Nombre de usuario</string>
+    <string name="preference_webservice_ip_summary">Dirección IP de Webservice</string>
+    <string name="preference_webservice_ip_title">IP</string>
+    <string name="preference_webservice_port_summary">Puerto de servicio web</string>
+    <string name="preference_webservice_port_title">Port</string>
+    <string name="read_barcode">Leer código de barras</string>
+    <string name="title_activity_add_game_enter_data">Introducir datos</string>
+    <string name="title_activity_add_game_select_players">Seleccionar Jugadores</string>
+    <string name="title_activity_add_player">Añadir jugador</string>
+    <string name="title_activity_display_game">Mostar jugo</string>
+    <string name="title_activity_edit_game">Editar jugo</string>
+    <string name="title_activity_edit_player_admin">Editar jugador</string>
+    <string name="title_activity_edit_player_own">Editar datos de usuario propios</string>
+    <string name="title_activity_login">Iniciar sesión</string>
+    <string name="title_activity_main">Visión de conjunto</string>
+    <string name="title_activity_main_offline">Descripción general (Desconectado)</string>
+    <string name="title_activity_player_stats">Estadísticas del jugador</string>
+    <string name="title_activity_score_board">Marcador</string>
+    <string name="title_activity_scoreboard">Marcador</string>
+    <string name="title_activity_settings">Ajustes</string>
+    <string name="title_activity_site_notice">Aviso del sitio</string>
+    <string name="title_activity_team_management">División de equipo</string>
+    <string name="title_dialogDeletePlayer">¿Eliminar jugador?</string>
+    <string name="use_flash">Utilizar Flash</string>
+    <string name="yes">Sí</string>
 </resources>
