--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">Soccer</string>
     <!--Activitytitles-->
-    <string name="title_activity_main">Soccer</string>
-    <string name="title_activity_main_offline">Soccer (Offline)</string>
+    <string name="title_activity_main">Overview</string>
+    <string name="title_activity_main_offline">Overview (Offline)</string>
     <string name="title_activity_add_game_select_players">Select Players</string>
     <string name="title_activity_team_management">Team Division</string>
     <string name="title_activity_add_game_enter_data">Enter Data</string>
@@ -86,7 +86,7 @@
     <string name="NumPosAttack">Played Attack</string>
     <string name="NumPosDefense">Played Defense</string>
     <string name="NumPosMidfield">Played Midfield</string>
-    <string name="NumPosGoal">Played Goalie</string>
+    <string name="NumPosGoal">Played Goalkeeper</string>
     <string name="ShowPlayersOrGames">Show: </string>
     <string name="NoRemark">-</string>
     <string name="Remark">Remark</string>
@@ -245,12 +245,12 @@
     <string name="ok">OK</string>
     <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
     <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
-    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
+    <string name="low_storage_error">Scanner dependencies cannot be downloaded due to low device storage</string>
     <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
-    <string name="read_barcode">Read Barcode</string>
+    <string name="read_barcode">Scan Barcode</string>
     <string name="auto_focus">Auto Focus</string>
     <string name="use_flash">Use Flash</string>
     <string name="barcode_success">Barcode read successfully</string>
     <string name="barcode_failure">No barcode captured</string>
-    <string name="barcode_error">"Error reading barcode: %1$s"</string>
+    <string name="barcode_error">Error reading barcode: %1$s\"</string>
 </resources>
