--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">Soccer</string>
     <!--Activitytitles-->
-    <string name="title_activity_main">Soccer</string>
-    <string name="title_activity_main_offline">Soccer (Offline)</string>
+    <string name="title_activity_main">Übersicht</string>
+    <string name="title_activity_main_offline">Übersicht (Offline)</string>
     <string name="title_activity_add_game_select_players">Spielerauswahl</string>
     <string name="title_activity_team_management">Teamzuweisung</string>
     <string name="title_activity_add_game_enter_data">Ergebniseingabe</string>
@@ -35,7 +35,7 @@
     <string name="mniMain">Haupt</string>
     <string name="mniTeam">Team(test)</string>
     <string name="mniGerman">Deutsch</string>
-    <string name="mniEnglish">Englisch</string>
+    <string name="mniEnglish">English</string>
     <string name="mniLogout">Abmelden</string>
     <string name="mniAdd">Hinzufügen</string>
     <string name="mniEdit">Benutzerdaten bearbeiten</string>
@@ -43,7 +43,7 @@
     <string name="ctxMniDeletePlayer">Löschen</string>
 
     <!--Checkboxes-->
-    <string name="ckbUpdatePassword">Passwort erneuern</string>
+    <string name="ckbUpdatePassword">Passwort updaten</string>
     <string name="ckbIsAdmin">Admin</string>
 
     <!--Settings-->
@@ -184,4 +184,14 @@
     <string name="player">Spieler</string>
     <string name="title_activity_site_notice">Impressum</string>
     <string name="nav_site_notice_title">Impressum</string>
+    <string name="barcode_error"></string>
+    <string name="low_storage_error">Scannersoftware kann auf Grund von zu geringem Systemspeicher nicht heruntergeladen werden</string>
+    <string name="msg_CannotDeletePlayerInLocalGame">Spieler, die an lokal gespeicherten Spielen teilnehmen können, nicht gelöscht werden</string>
+    <string name="no_camera_permission">Diese App kann nicht ohne Kamera Erlaubnis ausgeführt werden. Die App wird nun beendet.</string>
+    <string name="ok">OK</string>
+    <string name="permission_camera_rationale">Kamera-Zugriff wird für die Erkennung benötigt</string>
+    <string name="preference_sitenotice_title">Impressum</string>
+    <string name="read_barcode">Barcode scannen</string>
+    <string name="use_flash">Blitz benutzen</string>
+    <string name="title_dialogDeletePlayer">Spieler löschen?</string>
 </resources>
