--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -171,6 +171,7 @@
     <string name="msg_ConfirmPlayerDeletion">Do you really want to delete player \'%s\' ?</string>
     <string name="msg_DataSavedLocally">Data saved locally</string>
     <string name="msg_CannotDeletePlayerInLocalGame">Cannot delete player who is participating in locally saved game</string>
+    <string name= "msg_ShuffleWarning">Please check if teams are valid</string>
 
     <!--Nav Drawer-->
     <string name="navigation_drawer_open">Open navigation drawer</string>
