--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="nav_settings_title">Settings</string>
     <string name="title_activity_score_board">Scoreboard</string>
     <string name="title_activity_site_notice">Site Notice</string>
+    <string name="title_activity_qr_scanner">QR-Code Scanner</string>
 
     <!--Buttons-->
     <string name="btnLogin">Login</string>
@@ -248,4 +249,6 @@
     <string name="qr_player_not_found">Player not found</string>
     <string name="qr_player_already_added">Player is already added</string>
     <string name="qr_failed">Something went wrong</string>
+    <string name="btnQR">QR-Code</string>
+
 </resources>
