--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,6 +112,8 @@
     <string name="games">Games</string>
     <string name="wins">Wins</string>
     <string name="defeats">Defeats</string>
+    <string name="team1">Team 1</string>
+    <string name="team2">Team 2</string>
 
 
     <!--Settings Array-->
