--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -221,8 +221,8 @@
                     </ul>
                 <h2>Icons</h2>
                 <ul>
-                    <li>? icon erstellt von <a href="http://www.flaticon.com/authors/vaadin" title="Vaadin">Vaadin</a> von <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> (<a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>)</li>
-                    <li>? icon erstellt von <a href="http://www.freepik.com" title="Freepik">Freepik</a> von <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> (<a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>)</li>
+                    <li><a href="http://www.flaticon.com/authors/vaadin" title="Vaadin">Vaadin</a> (<a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>)</li>
+                    <li><a href="http://www.freepik.com" title="Freepik">Freepik</a> (<a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>)</li>
                 </ul>
                 <br/>
                 <h3>Developed by</h3>
