fixed team division layout 1 - shuffle feature

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -230,4 +230,5 @@
             </body>
         </html>
     ]]></string>
+    <string name="msg_ShuffleWarning">Teams bitte manuell überprüfen</string>
 </resources>
